tests/rosetta/out/Pascal/catalan-numbers-1.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/catalan-numbers-1.pas
catalan-numbers-1.pas(17,9) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
catalan-numbers-1.pas(18,6) Note: Call to subroutine "operator >(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
catalan-numbers-1.pas(18,10) Note: Call to subroutine "operator -(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
catalan-numbers-1.pas(18,14) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
catalan-numbers-1.pas(21,9) Note: Call to subroutine "operator <(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
catalan-numbers-1.pas(21,12) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
catalan-numbers-1.pas(39,7) Error: Identifier not found "i"
catalan-numbers-1.pas(39,7) Error: Ordinal expression expected
catalan-numbers-1.pas(39,7) Error: Illegal counter variable
catalan-numbers-1.pas(41,30) Error: Identifier not found "i"
catalan-numbers-1.pas(48) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
