tests/rosetta/out/Pascal/catalan-numbers-1.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:36Z
program CatalanNumbers1;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function binom(n: integer; k: integer): integer;
var
  i: integer;
  kk: Variant;
  res: integer;
begin
  if ((k < 0) or (k > n)) then ;
  kk := k;
  if (kk > n - kk) then ;
  res := 1;
  i := 0;
  while (i < kk) do
  begin
    res := res * n - i;
    i := i + 1;
    res := Trunc(res div i);
  end;
  result := res;
  exit;
end;

function catalan(n: integer): integer;
begin
  result := Trunc(binom(2 * n, n) div n + 1);
  exit;
end;

function main(): integer;
begin
  for i := 0 to 15 - 1 do
  begin
    writeln(IntToStr(catalan(i)));
  end;
end;

begin
  main();
end.
